# optimism

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .golangci.yaml  AGENTS.md  ARCHITECTURE_DIAGRAM.md  CONTRIBUTING.md  CROSS_DOMAIN_MESSAGING_DEEP_DIVE.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile-builder  Dockerfile-contracts  Dockerfile-opstack  Dockerfile.builder  Dockerfile.op-batcher  Dockerfile.op-challenger  Dockerfile.op-conductor  Dockerfile.op-deployer  Dockerfile.op-geth  Dockerfile.op-node  Dockerfile.op-proposer  Dockerfile.op-validator  ENGINE_API_ENTRY_POINTS.md  ENGINE_API_ENTRY_POINTS.md.backup  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  build-prestate.sh  docker-bake.hcl  go.mod  go.sum  justfile  mise.toml  pnpm-lock.yaml  superchain-ops-upgrade-flow.md  testnet.sh
.circleci/: Untitled  config.yml  l2-rpcs.json  (+1 more)
op-tee-disputegame-utils/: .gitignore  Cargo.toml  README.md  attest_doc_example  program_info_example.json  proof_result_example.json
op-tee-disputegame-utils/.cargo/: config.toml
op-tee-disputegame-utils/methods/: Cargo.toml  build.rs
op-tee-disputegame-utils/methods/guest/: Cargo.toml
op-tee-disputegame-utils/methods/guest/src/: main.rs
op-tee-disputegame-utils/methods/src/: lib.rs
op-tee-disputegame-utils/prover/: Cargo.toml
rust/alloy-op-evm/: Cargo.toml  release.toml
rust/alloy-op-evm/src/: aa_precompiles.rs  eip8130_compat.rs  env.rs  lib.rs  tx.rs
rust/alloy-op-evm/src/block/: gasless_contract.rs  mod.rs  native_aa.rs  receipt_builder.rs  tests.rs  xlayer_gasless_contract.rs  xlayer_v1.rs
rust/alloy-op-evm/src/eip8130/: address.rs  auth_state.rs  mod.rs  native_verifier.rs  parts.rs  storage.rs
rust/alloy-op-evm/src/post_exec/: inspector.rs  mod.rs
rust/alloy-op-evm/src/post_exec/inspector/: tests.rs
rust/alloy-op-evm/src/xlayer/: gasless.rs  mod.rs
rust/op-rbuilder/: Cargo.toml  Dockerfile  Makefile  README.md  justfile  rust-toolchain.toml
rust/op-rbuilder/crates/op-rbuilder/: Cargo.toml
rust/op-rbuilder/crates/op-rbuilder/src/: launcher.rs  lib.rs  metrics.rs  mock_tx.rs  sdm_admin.rs  tx.rs  tx_signer.rs
rust/op-rbuilder/crates/op-rbuilder/src/builders/: builder_tx.rs  context.rs  generator.rs  mod.rs
rust/op-rbuilder/crates/op-rbuilder/src/builders/flashblocks/: ctx.rs  payload.rs  payload_handler.rs  service.rs
rust/op-rbuilder/crates/op-rbuilder/src/builders/standard/: payload.rs  service.rs
rust/op-rbuilder/crates/op-rbuilder/src/primitives/: telemetry.rs
rust/op-rbuilder/crates/op-rbuilder/src/primitives/reth/: engine_api_builder.rs
rust/op-rbuilder/crates/op-rbuilder/src/tests/: flashblocks.rs  revert.rs  smoke.rs  txpool.rs
rust/op-rbuilder/crates/op-rbuilder/src/tests/framework/: driver.rs  instance.rs  txs.rs
rust/op-rbuilder/crates/tdx-quote-provider/: Dockerfile
rust/op-rbuilder/docs/: eth_sendBundle.md  flashblocks.md
rust/op-reth-test-engine/: Cargo.toml
rust/op-reth-test-engine/src/: chain.rs  lib.rs
rust/op-reth/crates/post-exec-replay/: Cargo.toml
rust/op-reth/crates/post-exec-replay/src/: lib.rs  replay.rs  types.rs
rust/rollup-boost/: .dockerignore  Cargo.toml  Dockerfile  Justfile  Makefile  rust-toolchain.toml
rust/rollup-boost/crates/flashblocks-rpc/: Cargo.toml
rust/rollup-boost/crates/flashblocks-rpc/src/: cache.rs
rust/rollup-boost/crates/flashblocks-rpc/src/tests/: mod.rs
rust/rollup-boost/crates/rollup-boost/: Cargo.toml
rust/rollup-boost/crates/rollup-boost/src/: cli.rs  debug_api.rs  health.rs  lib.rs  metrics.rs  payload.rs  proxy.rs  server.rs  tracing.rs
rust/rollup-boost/crates/rollup-boost/src/client/: auth.rs  http.rs  rpc.rs
rust/rollup-boost/crates/rollup-boost/src/flashblocks/: args.rs  inbound.rs  launcher.rs  outbound.rs  primitives.rs  service.rs
rust/rollup-boost/crates/rollup-boost/src/tests/: builder_full_delay.rs  execution_mode.rs  fcu_no_block_time_delay.rs  no_tx_pool.rs  remote_builder_down.rs  unhealthy_builder_traffic.rs
rust/rollup-boost/crates/rollup-boost/tests/: cli.rs
rust/rollup-boost/crates/websocket-proxy/: Dockerfile
rust/rollup-boost/crates/websocket-proxy/src/: main.rs  rate_limit.rs  registry.rs  server.rs
rust/rollup-boost/crates/websocket-proxy/tests/: integration.rs
rust/xlayer/: .gitignore  Cargo.toml  DEVNET.md  README.md
rust/xlayer/config/devnet/: .env.example  l1-genesis.json  rollup.json  xlayer-node.toml
rust/xlayer/crates/engine-bridge/: Cargo.toml
rust/xlayer/crates/engine-bridge/src/: client.rs  error.rs  lib.rs
rust/xlayer/docker/: docker-compose.devnet.yml
rust/xlayer/docker/l1/: .gitignore
rust/xlayer/docker/op-contracts/deploy-state/: implementations.json  intent.toml  rollup.json  state.json  superchain.json
rust/xlayer/docs/: l2config.md  load-test-comparison-20260325.md
rust/xlayer/docs/adv-erc20-40w-120s-500Mgas-20260408_030806/: base-cl.blocks.json  base-cl.json  base-cl.md  comparison.md  kona-okx-baseline.blocks.json  kona-okx-baseline.json  kona-okx-baseline.md  kona-okx-optimised.blocks.json  kona-okx-optimised.json  kona-okx-optimised.md  op-node.blocks.json  op-node.json  op-node.md  phase-report.md  report.md  simple-report.md
rust/xlayer/docs/commands/: devnet-commands.md  l1-recovery.md
rust/xlayer/docs/concepts/: block-transitions.md  foundry-test-accounts.md  l1-reset-internals.md  l2-explainer.md  main-rs-deep-dive.md  op-stack-finality.md
rust/xlayer/docs/host-port/: devnet-ports.md
rust/xlayer/docs/proposals/: adventure-stress-testing.md
rust/xlayer/docs/setup/: parallel-mode-setup.md
rust/xlayer/docs/testing/: enhanced-load-test.md  parallel-tx-submission.md
rust/xlayer/scripts/devnet/: 0-all.sh  5-perf-baseline.sh  HOW-TO-RUN-LOAD-TEST.md  README.md  TESTING-GUIDE.md  health-check.sh  lib.sh  load-test.md  load-test.sh  perf-baseline.sh  restart-node.sh  simple-bench.sh  start-all.sh  stop-all.sh  test-tx.sh
rust/xlayer/scripts/devnet/internal/: start-l1.sh  start-node.sh
rust/xlayer/scripts/devnet/maintenance/: redeploy-op-contracts.sh  reset-l1-reconfig.sh  reset-l2.sh
test/: .env  (+69 more)
(+2209 files in other folders)
