[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { workspace = true }

[dependencies]
risc0-zkvm = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]
