[workspace.package]
version = "0.2.13"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/flashbots/op-rbuilder"
repository = "https://github.com/flashbots/op-rbuilder"
exclude = [".github/"]

[workspace]
members = [ "crates/op-rbuilder", "crates/p2p", "crates/tdx-quote-provider"]
default-members = ["crates/op-rbuilder"]
resolver = "2"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true
lto = "thin"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
unused_async = "warn"

[workspace.dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-primitives = { package = "reth-ethereum-primitives", git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-primitives-traits = { version = "0.4.1", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0", features = [
    "test-utils",
] }

reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-tracing-otlp = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }

# reth optimism
reth-optimism-primitives = { path = "../op-reth/crates/primitives/", default-features = false }
reth-optimism-consensus = { path = "../op-reth/crates/consensus/", default-features = false }
reth-optimism-cli = { path = "../op-reth/crates/cli/", default-features = false }
reth-optimism-forks = { path = "../op-reth/crates/hardforks/", default-features = false }
reth-optimism-evm = { path = "../op-reth/crates/evm/", default-features = false }
reth-optimism-node = { path = "../op-reth/crates/node/" }
reth-optimism-payload-builder = { path = "../op-reth/crates/payload/" }
reth-optimism-chainspec = { path = "../op-reth/crates/chainspec/", default-features = false }
reth-optimism-txpool = { path = "../op-reth/crates/txpool/" }
reth-optimism-rpc = { path = "../op-reth/crates/rpc/", features = [
    "client",
] }

revm = { version = "40.0.3", default-features = false }
revm-inspectors = "0.40.1"
op-revm = { version = "20.0.0", path = "../op-revm/", default-features = false }
revm-bytecode = { version = "11.0.0", default-features = false }
revm-database = { version = "15.0.0", default-features = false }
revm-state = { version = "12.0.0", default-features = false }
revm-primitives = { version = "24.0.0", default-features = false }
revm-interpreter = { version = "37.0.0", default-features = false }
revm-inspector = { version = "21.0.3", default-features = false }
revm-context = { version = "18.0.3", default-features = false }
revm-context-interface = { version = "19.0.3", default-features = false }
revm-database-interface = { version = "12.0.0", default-features = false }

ethereum_ssz_derive = "0.9.0"
ethereum_ssz = "0.9.0"

alloy-primitives = { version = "1.5.6", default-features = false, features = [
    "map-foldhash",
] }
alloy-rlp = { version = "0.3.13", default-features = false, features = [
    "core-net",
] }
alloy-chains = { version = "0.2.33", default-features = false }
alloy-contract = { version = "2.0.4", default-features = false }
alloy-evm = { version = "0.36.0", default-features = false }
alloy-provider = { version = "2.0.4", features = [
    "reqwest",
    "debug-api",
], default-features = false }
alloy-pubsub = { version = "2.0.4", default-features = false }
alloy-eips = { version = "2.0.4", default-features = false }
alloy-rpc-types = { version = "2.0.4", features = [
    "eth",
], default-features = false }
alloy-json-rpc = { version = "2.0.4", default-features = false }
alloy-transport-http = { version = "2.0.4", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-network = { version = "2.0.4", default-features = false }
alloy-network-primitives = { version = "2.0.4", default-features = false }
alloy-transport = { version = "2.0.4" }
alloy-node-bindings = { version = "2.0.4", default-features = false }
alloy-consensus = { version = "2.0.4", default-features = false }
alloy-serde = { version = "2.0.4", default-features = false }
alloy-sol-types = { version = "1.5.6", default-features = false, features = ["json"] }
alloy-rpc-types-beacon = { version = "2.0.4", default-features = false }
alloy-rpc-types-engine = { version = "2.0.4", default-features = false }
alloy-rpc-types-eth = { version = "2.0.4", default-features = false }
alloy-signer-local = { version = "2.0.4", default-features = false }
alloy-rpc-client = { version = "2.0.4", default-features = false }
alloy-genesis = { version = "2.0.4", default-features = false }
alloy-trie = { version = "0.9.4", default-features = false }

alloy-hardforks = { version = "0.4.7", default-features = false }

# rollup-boost
rollup-boost = { path = "../rollup-boost/crates/rollup-boost" }

# optimism
alloy-op-evm = { version = "0.32.0", path = "../alloy-op-evm/", default-features = false }
alloy-op-hardforks = { version = "0.5.0", path = "../alloy-op-hardforks/", default-features = false }
op-alloy-rpc-types = { version = "2.0.0", path = "../op-alloy/crates/rpc-types", default-features = false }
op-alloy-rpc-types-engine = { version = "2.0.0", path = "../op-alloy/crates/rpc-types-engine", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.22.0", default-features = false }
op-alloy-network = { version = "2.0.0", path = "../op-alloy/crates/network", default-features = false }
op-alloy-consensus = { version = "2.0.0", path = "../op-alloy/crates/consensus", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }

async-trait = { version = "0.1.83" }
clap = { version = "4.4.3", features = ["derive", "env", "string"] }
clap_builder = { version = "4.5.19" }
thiserror = { version = "1.0.64" }
eyre = { version = "0.6.12" }
jsonrpsee = { version = "0.26.0" }
jsonrpsee-types = { version = "0.26.0" }
jsonrpsee-core = { version = "0.26.0" }
parking_lot = { version = "0.12.3" }
tokio = { version = "1.44.2", default-features = false }
auto_impl = { version = "1.2.0" }
reqwest = { version = "0.12.8" }
serde = { version = "1.0.210" }
serde_json = { version = "1.0.128" }
serde_with = { version = "3.8.1" }
secp256k1 = { version = "0.30" }
derive_more = { version = "2" }
either = { version = "1.15.0", default-features = false }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
url = "2.5.2"
warp = "0.3.7"
flate2 = "1.0.37"
prometheus = "0.13.4"
ctor = "0.2"
dashmap = "6.1"
hex = "0.4"
futures = "0.3"
futures-util = "0.3.31"

lazy_static = "1.4.0"
tikv-jemallocator = { version = "0.6" }
tracing = "0.1.37"
metrics = { version = "0.24.1" }
ahash = "0.8.6"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }
vergen = "9.1.0"
vergen-git2 = "9.1.0"
opentelemetry = { version = "0.31", features = ["trace"] }
