  [workspace]
  members = [
      "crates/engine-bridge",
      "bin/xlayer-node",
  ]
  resolver = "2"

  [workspace.package]
  edition = "2021"
  license = "MIT OR Apache-2.0"

  [patch.crates-io]
  # Force all deps to use the same local op-alloy as okx-optimism/rust/ workspace.
  # Without this, reth deps pull crates.io 0.23.1 while kona uses the local path version —
  # same version number but different crate instances → type mismatch errors.
  op-alloy-rpc-types-engine = { path = "../op-alloy/crates/rpc-types-engine" }
  op-alloy-consensus        = { path = "../op-alloy/crates/consensus" }
  op-alloy-network          = { path = "../op-alloy/crates/network" }
  op-alloy-rpc-types        = { path = "../op-alloy/crates/rpc-types" }

  [workspace.metadata]
  # Override rust-version check — deps from okx-reth require 1.91+